small visual changes

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <div style="float:right; margin-right: 2px; margin-left: 2px;">
                 <input id="price_maximum_1" name="price_maximum_1" class="smallInput rating_updater" size="2" type="text" placeholder="1200">
               </div>
-              <div style="float:right; margin-right: 2px; margin-left: 2px; color: black">
+              <div style="float:right; margin-right: 2px; margin-left: 2px; color: #5b5b5b;">
                 <p>-</p>
               </div>
               <div style="float:right; margin-right: 2px; margin-left: 2px;">
@@ -107,14 +107,14 @@
               <div style="float:right; margin-right: 2px; margin-left: 2px;">
                 <input id="size_maximum_1" name="size_maximum_1" class="smallInput rating_updater" size="2" type="text">
               </div>
-              <div style="float:right; margin-right: 2px; margin-left: 2px; color: black;">
+              <div style="float:right; margin-right: 2px; margin-left: 2px; color: #5b5b5b;">
                 <p>-</p>
               </div>
               <div style="float:right; margin-right: 2px; margin-left: 2px;">
                 <input id="size_minimum_1" name="size_minimum_1" class="smallInput rating_updater" size="2" type="text">
               </div>
 
-              <div style="float:right; margin-right: 2px; margin-left: 2px; color: black;">
+              <div style="float:right; margin-right: 2px; margin-left: 2px; color: #5b5b5b;">
                 <p>Display</p>
               </div>
 
@@ -123,14 +123,14 @@
               <div style="float:right; margin-right: 2px; margin-left: 2px;">
                 <input id="size_maximum_2" name="size_maximum_2" class="smallInput rating_updater" size="2" type="text">
               </div>
-              <div style="float:right; margin-right: 2px; margin-left: 2px; color: black;">
+              <div style="float:right; margin-right: 2px; margin-left: 2px; color: #5b5b5b;">
                 <p>-</p>
               </div>
               <div style="float:right; margin-right: 2px; margin-left: 2px;">
                 <input id="size_minimum_2" name="size_minimum_2" class="smallInput rating_updater" size="2" type="text">
               </div>
 
-              <div style="float:right; margin-right: 2px; margin-left: 2px; color: black;">
+              <div style="float:right; margin-right: 2px; margin-left: 2px; color: #5b5b5b;">
                 <p>Length</p>
               </div>
 
@@ -139,14 +139,14 @@
               <div style="float:right; margin-right: 2px; margin-left: 2px;">
                 <input id="size_maximum_3" name="size_maximum_3" class="smallInput rating_updater" size="2" type="text">
               </div>
-              <div style="float:right; margin-right: 2px; margin-left: 2px; color: black;">
+              <div style="float:right; margin-right: 2px; margin-left: 2px; color: #5b5b5b;">
                 <p>-</p>
               </div>
               <div style="float:right; margin-right: 2px; margin-left: 2px;">
                 <input id="size_minimum_3" name="size_minimum_3" class="smallInput rating_updater" size="2" type="text">
               </div>
 
-              <div style="float:right; margin-right: 2px; margin-left: 2px; color: black;">
+              <div style="float:right; margin-right: 2px; margin-left: 2px; color: #5b5b5b;">
                 <p>Width</p>
               </div>
             </th>
