Notch and waterproof attributes added

--- a/index.html
+++ b/index.html
@@ -275,7 +275,6 @@
               <th>
                 <input type="checkbox" id="simCardInput" class="cbx hidden rating_updater" />
                 <label for="simCardInput" class="lbl rating_updater filterselect"></label>
-
               </th>
             </tr>
             <tr>
@@ -283,7 +282,24 @@
               <th>
                 <input type="checkbox" id="sdSlotInput" class="cbx hidden rating_updater" />
                 <label for="sdSlotInput" class="lbl rating_updater filterselect"></label>
-
+              </th>
+            </tr>
+            <tr>
+              <th>No notch</th>
+              <th>
+                <input type="checkbox" id="notchInput" class="cbx hidden rating_updater" />
+                <label for="notchInput" class="lbl rating_updater filterselect"></label>
+              </th>
+            </tr>
+            <tr>
+              <th>Waterproof</th>
+              <th>
+                <select id="waterproofInput" class="rating_updater" style="width:130px;">
+                <option value="" selected="selected"></option>
+                <option value="4">IP X4 Splashing water</option>
+                <option value="7">IP X7 Immersion up to 1m</option>
+                <option value="8">IP X8 Immersion beyond 1m</option>
+                </select>
               </th>
             </tr>
 
