new phone added and country support framework laid down

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <ul>
           <li>
             <select id="countryInput" class="rating_updater accentColor heavy">
-              <option value="de" selected="selected">GERMANY</option>
-              <option value="2">More Countries coming soon</option>
+              <option value="de" selected>GERMANY</option>
+              <option value="" >More Countries coming soon</option>
             </select>
           </li>
         </ul>
