amazon .com support

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <div style="float: right;">
         <ul>
           <li>
-            <select id="countryInput" class="rating_updater accentColor heavy">
+            <select id="countryInput" class="accentColor heavy">
               <option value="de" selected>GERMANY</option>
-              <option value="" >More Countries coming soon</option>
+              <option value="com">UNITED STATES</option>
             </select>
           </li>
         </ul>
