--- a/index.html
+++ b/index.html
@@ -57,10 +57,6 @@
       <table style="width: 100%;">
         <thead class="settingsTable">
           <tr>
-            <th></th>
-            <th ></th>
-          </tr>
-          <tr>
             <th>Sort table by</th>
             <th>
               <input type="image" src="images/sort_arrows.png" id="sorting_order" class="sorting_order" height="22px" width="22px" border="0" alt="Submit" />
@@ -171,7 +167,7 @@
               <input class="rating-input rating_updater" id="design-input-1-2" name="design-input-1" value="2" type="radio">
               <label for="design-input-1-2" class="rating-star"></label>
               <input class="rating-input rating_updater" id="design-input-1-1" name="design-input-1" value="1" type="radio" checked="checked">
-              <label for="design-input-1-1" class="rating-star"></label>
+              <label for="design-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;" ></label>
               </span>
               </th>
             </tr>
@@ -188,7 +184,7 @@
               <input class="rating-input rating_updater" id="processor-input-1-2" name="processor-input-1" value="2" type="radio">
               <label for="processor-input-1-2" class="rating-star"></label>
               <input class="rating-input rating_updater" id="processor-input-1-1" name="processor-input-1" value="1" type="radio" checked="checked">
-              <label for="processor-input-1-1" class="rating-star"></label>
+              <label for="processor-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
             </span>
               </th>
             </tr>
@@ -205,7 +201,7 @@
               <input class="rating-input rating_updater" id="updates-input-1-2" name="updates-input-1" value="2" type="radio">
               <label for="updates-input-1-2" class="rating-star"></label>
               <input class="rating-input rating_updater" id="updates-input-1-1" name="updates-input-1" value="1" type="radio" checked="checked">
-              <label for="updates-input-1-1" class="rating-star"></label>
+              <label for="updates-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
             </span>
               </th>
             </tr>
@@ -222,7 +218,7 @@
               <input class="rating-input rating_updater" id="camera-input-1-2" name="camera-input-1" value="2" type="radio">
               <label for="camera-input-1-2" class="rating-star"></label>
               <input class="rating-input rating_updater" id="camera-input-1-1" name="camera-input-1" value="1" type="radio" checked="checked">
-              <label for="camera-input-1-1" class="rating-star"></label>
+              <label for="camera-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
             </span>
               </th>
             </tr>
@@ -239,7 +235,7 @@
               <input class="rating-input rating_updater" id="battery-input-1-2" name="battery-input-2" value="2" type="radio">
               <label for="battery-input-1-2" class="rating-star"></label>
               <input class="rating-input rating_updater" id="battery-input-1-1" name="battery-input-2" value="1" type="radio" checked="checked">
-              <label for="battery-input-1-1" class="rating-star"></label>
+              <label for="battery-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
               </span>
               </th>
             </tr>
