Small design changes

--- a/index.html
+++ b/index.html
@@ -54,8 +54,13 @@
 
 
     <div class="filterdiv settingsdiv">
+      <div style="overflow-y: auto; height: calc(100vh - 190px);">
       <table style="width: 100%;">
         <thead class="settingsTable">
+          <tr>
+            <th></th>
+            <th style="background-color: #3367d5;"></th>
+          </tr>
           <tr>
             <th>Sort table by</th>
             <th>
@@ -79,7 +84,7 @@
 
           <tr>
             <th></th>
-            <th ></th>
+            <th style="background-color: #3367d5;"></th>
           </tr>
 
           <tr>
@@ -151,7 +156,7 @@
 
             <tr>
               <th></th>
-              <th ></th>
+              <th style="background-color: #3367d5;"></th>
             </tr>
 
             <tr>
@@ -242,7 +247,7 @@
 
             <tr>
               <th></th>
-              <th ></th>
+              <th style="background-color: #3367d5;"></th>
             </tr>
 
             <tr>
@@ -299,13 +304,17 @@
                 </select>
               </th>
             </tr>
-
+            <tr>
+              <th></th>
+              <th style="background-color: #3367d5;"></th>
+            </tr>
 
 
 
         </thead>
       </table>
     </div>
+  </div>
 
     <div style="overflow-x:auto;" class="itemsdiv">
       <table id="myTable" class="itemsTable">
