--- a/sites/about.html
+++ b/sites/about.html
@@ -15,101 +15,112 @@
 </head>
 
 <body>
-  <div class="logo">
-    <a class="" href="../index.html" style="font-size: 43.2px; text-decoration: none; color: #666;">
-                      <span class="accentColor">smartphone</span>-picker
+  <div class="box">
+    <div class="logo row header">
+      <a class="" href="../index.html" style="font-size: 43.2px; text-decoration: none; color: #fefefe;">
+                      <span class="">smartphone</span>-picker
                   </a>
-  </div>
-  <div class="main-menu">
-    <div class="main-menu-text">
-      <div style="float: left;">
-        <ul>
-          <li>
-            <a class="main-menu-link" href="https://blog.smartphone-picker.com/">Blog</a>
-          </li>
-          <li>
-            <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">Contact</a>
-          </li>
-          <li>
-            <a class="main-menu-link" href="sites/about.html">About</a>
-          </li>
-        </ul>
-      </div>
-      <div style="float: right;">
+    </div>
+    <div class="main-menu row header">
+      <div class="main-menu-text">
+        <div style="float: left;">
+          <ul>
+            <li>
+              <a class="main-menu-link" href="https://blog.smartphone-picker.com/">Blog</a>
+            </li>
+            <li>
+              <a class="main-menu-link" href="mailto:admin@smartphone-picker.com">Contact</a>
+            </li>
+            <li>
+              <a class="main-menu-link" href="sites/about.html">About</a>
+            </li>
+          </ul>
+        </div>
+        <div style="float: right;">
+          <ul>
+            <li>
+              <select id="countryInput" class="heavy">
+              <option value="de" selected>GERMANY</option>
+              <option value="com">UNITED STATES</option>
+            </select>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-
-
-  <div class="description">
-    <div>
-      <p style="font-size:23px; color:black;">Shopping for a new smartphone is exhausting and frustrating. Period.</p>
-      <p> You just want to buy the best product in your price range, right? But before you know it there are 20 tabs open and three hours have passed:</p>
-      <br>
-      <table class="youdontknow">
-        <tbody>
-          <tr>
-            <td>
-              <p>Does this smartphone have a <span class="accentColor" style="font-weight:bold">headphone jack</span>?</p>
-            </td>
-            <td>
-              <p>You don't know because amazon sure isn't telling you.</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p>Is the camera with <span class="accentColor" style="font-weight:bold">20</span> Megapixels or <span class="accentColor" style="font-weight:bold">13</span> Megapixels better?</p>
-            </td>
-            <td>
-              <p>You don't know because these numbers are meaningless without context.</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p>Does this smartphone get <span class="accentColor" style="font-weight:bold">regular updates</span>?</p>
-            </td>
-            <td>
-              <p> You don't know, how about you check the last three smartphones of the brand to estimate their trustworthiness regarding updates.</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <p><span class="accentColor" style="font-weight:bold">...</span></p>
-            </td>
-            <td>
-              <p><span class="accentColor" style="font-weight:bold">...</span></p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
 
 
 
-      <br>
-      <p>I think you understand the problem, but there is a solution...</p>
-      <p style="font-size:23px; color:black;">We read the reviews and rate the important aspects:</p>
-      <p>You want to know if the <span class="accentColor" style="font-weight:bold">processor</span> is powerful and not what his name is. </p>
-      <p>You want to know if the <span class="accentColor" style="font-weight:bold">updates</span> come regularly so you can use your smartphone for years.</p>
-      <p>You want to know if the <span class="accentColor" style="font-weight:bold">camera</span> takes good pictures and not how many Megapixels it has.</p>
-      <p>You want to know if the <span class="accentColor" style="font-weight:bold">battery</span> lasts you a day and not how many mAh it has. </p>
-      <br>
-      <br>
-      <br>
+
+    <div class="description">
       <div>
-        <p style="font-size:23px; color:black;">We at smartphone-picker try our best to ensure that our smartphone data is correct and our ratings are appropriate. Still we can make mistakes and our ratings may be subject to bias.</p>
-        <p>If a particular specification or aspect is vital to you, we always recommend checking with the phone seller or reading trusted reviews online.</p>
-        <p>If you think that any specification or rating is wrong or simply not fitting, please contact us <a class="" href="mailto:admin@smartphone-picker.com">
+        <p style="font-size:23px; color:black;">Shopping for a new smartphone is exhausting and frustrating. Period.</p>
+        <p> You just want to buy the best product in your price range, right? But before you know it there are 20 tabs open and three hours have passed:</p>
+        <br>
+        <table class="youdontknow">
+          <tbody>
+            <tr>
+              <td>
+                <p>Does this smartphone have a <span class="accentColor" style="font-weight:bold">headphone jack</span>?</p>
+              </td>
+              <td>
+                <p>You don't know because amazon sure isn't telling you.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>Is the camera with <span class="accentColor" style="font-weight:bold">20</span> Megapixels or <span class="accentColor" style="font-weight:bold">13</span> Megapixels better?</p>
+              </td>
+              <td>
+                <p>You don't know because these numbers are meaningless without context.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p>Does this smartphone get <span class="accentColor" style="font-weight:bold">regular updates</span>?</p>
+              </td>
+              <td>
+                <p> You don't know, how about you check the last three smartphones of the brand to estimate their trustworthiness regarding updates.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <p><span class="accentColor" style="font-weight:bold">...</span></p>
+              </td>
+              <td>
+                <p><span class="accentColor" style="font-weight:bold">...</span></p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+
+
+
+        <br>
+        <p>I think you understand the problem, but there is a solution...</p>
+        <p style="font-size:23px; color:black;">We read the reviews and rate the important aspects:</p>
+        <p>You want to know if the <span class="accentColor" style="font-weight:bold">processor</span> is powerful and not what his name is. </p>
+        <p>You want to know if the <span class="accentColor" style="font-weight:bold">updates</span> come regularly so you can use your smartphone for years.</p>
+        <p>You want to know if the <span class="accentColor" style="font-weight:bold">camera</span> takes good pictures and not how many Megapixels it has.</p>
+        <p>You want to know if the <span class="accentColor" style="font-weight:bold">battery</span> lasts you a day and not how many mAh it has. </p>
+        <br>
+        <br>
+        <br>
+        <div>
+          <p style="font-size:23px; color:black;">We at smartphone-picker try our best to ensure that our smartphone data is correct and our ratings are appropriate. Still we can make mistakes and our ratings may be subject to bias.</p>
+          <p>If a particular specification or aspect is vital to you, we always recommend checking with the phone seller or reading trusted reviews online.</p>
+          <p>If you think that any specification or rating is wrong or simply not fitting, please contact us <a class="" href="mailto:admin@smartphone-picker.com">
                       here</a>.
-        </p>
-        <br>
-        <br>
-        <p>Legal stuff: </p>
-        <p><span class="accentColor" style="font-weight:bold">smartphone-picker is not responsible for any errors or omissions, or for the results obtained from the use of this information. All information on this site is provided “as is,” with no guarantee of completeness, accuracy, timeliness or the results
+          </p>
+          <br>
+          <br>
+          <p>Legal stuff: </p>
+          <p><span class="accentColor" style="font-weight:bold">smartphone-picker is not responsible for any errors or omissions, or for the results obtained from the use of this information. All information on this site is provided “as is,” with no guarantee of completeness, accuracy, timeliness or the results
       obtained from the use of this information.</span></p>
+        </div>
       </div>
     </div>
   </div>
-
 </body>
 
 </html>
