--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="box">
     <div class="logo row header">
-      <a class="" href="index.html" style="font-size: 43.2px; text-decoration: none; color: #fefefe;">
+      <a class="logo-text" href="index.html">
                       <span class="">smartphone</span>-picker
                   </a>
     </div>
@@ -54,7 +54,7 @@
 
 
 
-      <div class="filterdiv settingsdiv row content" style="overflow-y: auto;">
+      <div class="filterdiv settingsdiv row content">
         <div>
           <table style="width: 100%;" class="settingsTable">
             <thead>
@@ -375,7 +375,7 @@
               <th></th>
               <th></th>
               <th></th>
-              <th style="width:100%"></th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -387,7 +387,7 @@
 
     </div>
 
-    <div class="logo row header" style="flex: 1;   box-shadow: 0 -10px 20px rgba(0,0,0,0.19), 0 -6px 6px rgba(0,0,0,0.23);">
+    <div class="logo-bottom row header">
     </div>
 </body>
 
