--- a/sites/about.html
+++ b/sites/about.html
@@ -17,7 +17,7 @@
 <body>
   <div class="box">
     <div class="logo row header">
-      <a class="" href="../index.html" style="font-size: 43.2px; text-decoration: none; color: #fefefe;">
+      <a class="logo-text" href="index.html">
                       <span class="">smartphone</span>-picker
                   </a>
     </div>
