--- a/sites/about.html
+++ b/sites/about.html
@@ -17,7 +17,7 @@
 <body>
   <div class="box">
     <div class="logo row header">
-      <a class="logo-text" href="index.html">
+      <a class="logo-text" href="../index.html">
                       <span class="">smartphone</span>-picker
                   </a>
     </div>
