Price moved to horizontal and refactoring

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <input type="image" src="images/sort_arrows.png" id="sorting_order" class="sorting_order" height="22px" width="22px" border="0" alt="Submit" />
 
                   <select id="filterInput" class="filterselect">
-            <option value="price" selected="selected">Price</option>
+            <option value="price_" selected="selected">Price</option>
             <option value="length">Body-Size</option>
             <option value="display">Screen-Size</option>
             <option value="totalscore">Total Score</option>
@@ -161,7 +161,7 @@
                     <p>Width</p>
                   </div>
                 </th>
-
+              </tr>
 
             </thead>
           </table>
@@ -271,11 +271,11 @@
                 <th>Storage</th>
                 <th>
                   <select id="storageInput" class="rating_updater">
-                <option value="16" selected="selected">16GB -> ∞</option>
-                <option value="32" >32GB -> ∞</option>
-                <option value="64" >64GB -> ∞</option>
-                <option value="128">128GB -> ∞</option>
-                <option value="256">256GB -> ∞</option>
+                <option value="16" selected="selected">16GB -&gt ∞</option>
+                <option value="32" >32GB -&gt ∞</option>
+                <option value="64" >64GB -&gt ∞</option>
+                <option value="128">128GB -&gt ∞</option>
+                <option value="256">256GB -&gt ∞</option>
                 </select>
                 </th>
               </tr>
@@ -286,7 +286,6 @@
                 <th>
                   <input type="checkbox" id="jackInput" class="cbx hidden rating_updater" />
                   <label for="jackInput" class="lbl rating_updater filterselect"></label>
-                  </select>
                 </th>
               </tr>
               <tr>
@@ -388,6 +387,7 @@
 
     <div class="logo-bottom row header">
     </div>
+  </div>
 </body>
 
 </html>
