Added linter configs and refined the design even more

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <tr>
                 <th>Sort table by</th>
                 <th>
-                  <input type="image" src="images/sort_arrows.png" id="sorting_order" class="sorting_order" height="22px" width="22px" border="0" alt="Submit" />
+                  <input type="image" src="images/sort_arrows.png" id="sorting_order" class="sorting_order" height="22px" width="22px" alt="Submit" />
 
                   <select id="filterInput" class="filterselect">
             <option value="price_" selected="selected">Price</option>
@@ -270,12 +270,12 @@
               <tr>
                 <th>Storage</th>
                 <th>
-                  <select id="storageInput" class="rating_updater">
-                <option value="16" selected="selected">16GB -&gt ∞</option>
-                <option value="32" >32GB -&gt ∞</option>
-                <option value="64" >64GB -&gt ∞</option>
-                <option value="128">128GB -&gt ∞</option>
-                <option value="256">256GB -&gt ∞</option>
+                  <select id="storageInput" class="storageInput rating_updater">
+                <option value="16" selected="selected">16GB -&gt; ∞</option>
+                <option value="32" >32GB -&gt; ∞</option>
+                <option value="64" >64GB -&gt; ∞</option>
+                <option value="128">128GB -&gt; ∞</option>
+                <option value="256">256GB -&gt; ∞</option>
                 </select>
                 </th>
               </tr>
@@ -377,8 +377,6 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-            </tr>
           </tbody>
         </table>
       </div>
