First steps toward color support for smartphones

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   <input type="image" src="images/sort_arrows.png" id="sorting_order" class="sorting_order" height="22px" width="22px" alt="Submit" />
 
                   <select id="filterInput" class="filterselect">
-            <option value="price_" selected="selected">Price</option>
+            <option value="price" selected="selected">Price</option>
             <option value="length">Body-Size</option>
             <option value="display">Screen-Size</option>
             <option value="totalscore">Total Score</option>
