--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div class="box">
     <div class="logo row header">
       <a class="logo-text" href="index.html">
-                      <span class="">smartphone</span>-picker
-                  </a>
+        <span class="">smartphone</span>-picker
+      </a>
     </div>
     <div class="main-menu row header">
       <div class="main-menu-text">
@@ -40,9 +40,9 @@
           <ul>
             <li>
               <select id="countryInput" class="heavy">
-              <option value="de" selected>GERMANY</option>
-              <option value="com">UNITED STATES</option>
-            </select>
+                <option value="de" selected>GERMANY</option>
+                <option value="com">UNITED STATES</option>
+              </select>
             </li>
           </ul>
         </div>
@@ -66,14 +66,15 @@
               <tr>
                 <th>Sort table by</th>
                 <th>
-                  <input type="image" src="images/sort_arrows.png" id="sorting_order" class="sorting_order" height="22px" width="22px" alt="Submit" />
+                  <input type="image" src="images/sort_arrows.png" id="sorting_order" class="sorting_order" height="22px" width="22px" alt="Submit"
+                  />
 
                   <select id="filterInput" class="filterselect">
-            <option value="price" selected="selected">Price</option>
-            <option value="length">Body-Size</option>
-            <option value="display">Screen-Size</option>
-            <option value="totalscore">Total Score</option>
-            </select>
+                    <option value="price" selected="selected">Price</option>
+                    <option value="length">Body-Size</option>
+                    <option value="display">Screen-Size</option>
+                    <option value="totalscore">Total Score</option>
+                  </select>
                 </th>
               </tr>
               <tr>
@@ -176,85 +177,85 @@
                 <th>Design</th>
                 <th>
                   <span class="rating">
-              <input class="rating-input rating_updater" id="design-input-1-5" name="design-input-1" value="5" type="radio">
-              <label for="design-input-1-5" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="design-input-1-4" name="design-input-1" value="4" type="radio">
-              <label for="design-input-1-4" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="design-input-1-3" name="design-input-1" value="3" type="radio">
-              <label for="design-input-1-3" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="design-input-1-2" name="design-input-1" value="2" type="radio">
-              <label for="design-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="design-input-1-1" name="design-input-1" value="1" type="radio" checked="checked">
-              <label for="design-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;" ></label>
-              </span>
+                    <input class="rating-input rating_updater" id="design-input-1-5" name="design-input-1" value="5" type="radio">
+                    <label for="design-input-1-5" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="design-input-1-4" name="design-input-1" value="4" type="radio">
+                    <label for="design-input-1-4" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="design-input-1-3" name="design-input-1" value="3" type="radio">
+                    <label for="design-input-1-3" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="design-input-1-2" name="design-input-1" value="2" type="radio">
+                    <label for="design-input-1-2" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="design-input-1-1" name="design-input-1" value="1" type="radio" checked="checked">
+                    <label for="design-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
+                  </span>
                 </th>
               </tr>
               <tr>
                 <th>Processor</th>
                 <th>
                   <span class="rating">
-              <input class="rating-input rating_updater" id="processor-input-1-5" name="processor-input-1" value="5" type="radio">
-              <label for="processor-input-1-5" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="processor-input-1-4" name="processor-input-1" value="4" type="radio">
-              <label for="processor-input-1-4" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="processor-input-1-3" name="processor-input-1" value="3" type="radio">
-              <label for="processor-input-1-3" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="processor-input-1-2" name="processor-input-1" value="2" type="radio">
-              <label for="processor-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="processor-input-1-1" name="processor-input-1" value="1" type="radio" checked="checked">
-              <label for="processor-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
-            </span>
+                    <input class="rating-input rating_updater" id="processor-input-1-5" name="processor-input-1" value="5" type="radio">
+                    <label for="processor-input-1-5" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="processor-input-1-4" name="processor-input-1" value="4" type="radio">
+                    <label for="processor-input-1-4" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="processor-input-1-3" name="processor-input-1" value="3" type="radio">
+                    <label for="processor-input-1-3" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="processor-input-1-2" name="processor-input-1" value="2" type="radio">
+                    <label for="processor-input-1-2" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="processor-input-1-1" name="processor-input-1" value="1" type="radio" checked="checked">
+                    <label for="processor-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
+                  </span>
                 </th>
               </tr>
               <tr>
                 <th>Software</th>
                 <th>
                   <span class="rating">
-              <input class="rating-input rating_updater" id="updates-input-1-5" name="updates-input-1" value="5" type="radio">
-              <label for="updates-input-1-5" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="updates-input-1-4" name="updates-input-1" value="4" type="radio">
-              <label for="updates-input-1-4" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="updates-input-1-3" name="updates-input-1" value="3" type="radio">
-              <label for="updates-input-1-3" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="updates-input-1-2" name="updates-input-1" value="2" type="radio">
-              <label for="updates-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="updates-input-1-1" name="updates-input-1" value="1" type="radio" checked="checked">
-              <label for="updates-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
-            </span>
+                    <input class="rating-input rating_updater" id="updates-input-1-5" name="updates-input-1" value="5" type="radio">
+                    <label for="updates-input-1-5" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="updates-input-1-4" name="updates-input-1" value="4" type="radio">
+                    <label for="updates-input-1-4" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="updates-input-1-3" name="updates-input-1" value="3" type="radio">
+                    <label for="updates-input-1-3" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="updates-input-1-2" name="updates-input-1" value="2" type="radio">
+                    <label for="updates-input-1-2" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="updates-input-1-1" name="updates-input-1" value="1" type="radio" checked="checked">
+                    <label for="updates-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
+                  </span>
                 </th>
               </tr>
               <tr>
                 <th>Camera</th>
                 <th>
                   <span class="rating">
-              <input class="rating-input rating_updater" id="camera-input-1-5" name="camera-input-1" value="5" type="radio">
-              <label for="camera-input-1-5" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="camera-input-1-4" name="camera-input-1" value="4" type="radio">
-              <label for="camera-input-1-4" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="camera-input-1-3" name="camera-input-1" value="3" type="radio">
-              <label for="camera-input-1-3" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="camera-input-1-2" name="camera-input-1" value="2" type="radio">
-              <label for="camera-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="camera-input-1-1" name="camera-input-1" value="1" type="radio" checked="checked">
-              <label for="camera-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
-            </span>
+                    <input class="rating-input rating_updater" id="camera-input-1-5" name="camera-input-1" value="5" type="radio">
+                    <label for="camera-input-1-5" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="camera-input-1-4" name="camera-input-1" value="4" type="radio">
+                    <label for="camera-input-1-4" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="camera-input-1-3" name="camera-input-1" value="3" type="radio">
+                    <label for="camera-input-1-3" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="camera-input-1-2" name="camera-input-1" value="2" type="radio">
+                    <label for="camera-input-1-2" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="camera-input-1-1" name="camera-input-1" value="1" type="radio" checked="checked">
+                    <label for="camera-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
+                  </span>
                 </th>
               </tr>
               <tr>
                 <th>Battery</th>
                 <th>
                   <span class="rating">
-              <input class="rating-input rating_updater" id="battery-input-1-5" name="battery-input-2" value="5" type="radio">
-              <label for="battery-input-1-5" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="battery-input-1-4" name="battery-input-2" value="4" type="radio">
-              <label for="battery-input-1-4" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="battery-input-1-3" name="battery-input-2" value="3" type="radio">
-              <label for="battery-input-1-3" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="battery-input-1-2" name="battery-input-2" value="2" type="radio">
-              <label for="battery-input-1-2" class="rating-star"></label>
-              <input class="rating-input rating_updater" id="battery-input-1-1" name="battery-input-2" value="1" type="radio" checked="checked">
-              <label for="battery-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
-              </span>
+                    <input class="rating-input rating_updater" id="battery-input-1-5" name="battery-input-2" value="5" type="radio">
+                    <label for="battery-input-1-5" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="battery-input-1-4" name="battery-input-2" value="4" type="radio">
+                    <label for="battery-input-1-4" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="battery-input-1-3" name="battery-input-2" value="3" type="radio">
+                    <label for="battery-input-1-3" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="battery-input-1-2" name="battery-input-2" value="2" type="radio">
+                    <label for="battery-input-1-2" class="rating-star"></label>
+                    <input class="rating-input rating_updater" id="battery-input-1-1" name="battery-input-2" value="1" type="radio" checked="checked">
+                    <label for="battery-input-1-1" class="rating-star first-rating-star" style="background-position: 0 0;"></label>
+                  </span>
                 </th>
               </tr>
 
@@ -271,18 +272,19 @@
                 <th>Storage</th>
                 <th>
                   <select id="storageInput" class="storageInput rating_updater">
-                <option value="16" selected="selected">16GB -&gt; ∞</option>
-                <option value="32" >32GB -&gt; ∞</option>
-                <option value="64" >64GB -&gt; ∞</option>
-                <option value="128">128GB -&gt; ∞</option>
-                <option value="256">256GB -&gt; ∞</option>
-                </select>
+                    <option value="16" selected="selected">16GB -&gt; ∞</option>
+                    <option value="32">32GB -&gt; ∞</option>
+                    <option value="64">64GB -&gt; ∞</option>
+                    <option value="128">128GB -&gt; ∞</option>
+                    <option value="256">256GB -&gt; ∞</option>
+                  </select>
                 </th>
               </tr>
 
 
               <tr>
-                <th>Headphone-<br>Jack</th>
+                <th>Headphone-
+                  <br>Jack</th>
                 <th>
                   <input type="checkbox" id="jackInput" class="cbx hidden rating_updater" />
                   <label for="jackInput" class="lbl rating_updater filterselect"></label>
@@ -313,11 +315,11 @@
                 <th>Waterproof</th>
                 <th>
                   <select id="waterproofInput" class="rating_updater" style="width:80%;">
-                <option value="" selected="selected"></option>
-                <option value="4">IP X4 Splashing water</option>
-                <option value="7">IP X7 Immersion up to 1m</option>
-                <option value="8">IP X8 Immersion beyond 1m</option>
-                </select>
+                    <option value="" selected="selected"></option>
+                    <option value="4">IP X4 Splashing water</option>
+                    <option value="7">IP X7 Immersion up to 1m</option>
+                    <option value="8">IP X8 Immersion beyond 1m</option>
+                  </select>
                 </th>
               </tr>
 
